# SDL_Template

./: CMakeLists.txt
SDL_Template.xcodeproj/: project.pbxproj
doc/vscode_templates/: tasks.json
src/: Ant.cpp  Ant.h  Application.cpp  Application.h  main.cpp
